# PhD-Opportunity-Tracker

./: .gitignore  PROGRESS.md  README.md  cmds_to_run.txt
.github/workflows/: ci.yml  deploy-pages.yml
apps/api/: .env.example  README.md  phd_tracker.db  pyproject.toml  run.py
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  migrations.py  models.py  schemas.py  verification.py
apps/api/app/repositories/: opportunities.py
apps/api/app/routes/: ingest.py  opportunities.py
apps/api/app/services/: ingest.py  nlp.py
apps/api/app/sources/: __init__.py  academictransfer.py  base.py  euraxess.py  extraction.py  fetching.py  findaphd.py  inria.py  jobs_ac_uk.py  link_validation.py  registry.py
apps/api/tests/: test_academictransfer_source.py  test_database_migrations.py  test_euraxess_source.py  test_findaphd_source.py  test_inria_source.py  test_jobs_ac_uk_source.py  test_nlp_shortlisting.py  test_production_config.py  test_source_toolbox.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/applied/: page.tsx
apps/web/app/opportunity/: page.tsx
apps/web/app/opportunity/[id]/: page.tsx
apps/web/components/: apply-toggle.tsx  opportunity-card.tsx  opportunity-filter-board.tsx  source-panel.tsx
apps/web/lib/: api.ts  format.ts  links.ts  types.ts
db/: schema.sql
docs/: architecture.md  roadmap.md  source-priority.md
