[project]
name = "phd-opportunity-tracker-api"
version = "0.1.0"
description = "Backend API for the PhD Opportunity Tracker"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "lxml>=5.3.0",
    "pydantic>=2.9.0",
    "psycopg[binary]>=3.2.0",
    "scrapling[fetchers]>=0.4.7",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
]
